# controllers/UserController.js
@@ -1,7 +1,7 @@
 const UserModel = require('../models/UserModel')
 exports.create = async (req, res,) => {
     if (!req.body.email && !req.body.firstName && !req.body.lastName && !req.body.gpa) {
-        res.status(400).render('index', {mydata: "Content can not be empty!"})
+        res.status(400).render('results', {mydata: "Content can not be empty!"})
     }
     const user = new UserModel({
         email: req.body.email,
@@ -36,7 +36,7 @@ exports.findOne = async (req, res) => {
 };
 exports.destroy = async (req, res) => {
 
-    let useremail=req.body.email
+    let useremail = req.body.email
     await UserModel.deleteOne({email: useremail}).then(data => {
 
         if (data.deletedCount===0) {
@@ -49,6 +49,29 @@ exports.destroy = async (req, res) => {
         res.status(500).render('results', {mydata: err.message})
     });
 };
+exports.update = async (req, res) => {
 
+    if (!req.body.newEmail || !req.body.newFirstName || !req.body.newLastName || !req.body.newGpa) {
+        res.status(400).render('results', {mydata: "Data to update can not be empty!"})
+        return
+    }
+
+    const query = req.body.oldEmail;
+
+    await UserModel.findOneAndUpdate({email: query}, {email:req.body.newEmail,
+        firstName:req.body.newFirstName,
+        lastName:req.body.newLastName,
+        gpa:req.body.newGpa
+    }).then(data => {
+        console.log(data)
+        if (!data) {
+            res.status(404).render('results', {mydata: `User not found.`})
+        }else{
+            res.status(200).render('results', {mydata: "User updated successfully."})
+        }
+    }).catch(err => {
+        res.status(500).render('results', {mydata: err.message})
+    });
+};
 
 
